--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />
 
     <com.royrodriguez.transitionbutton.TransitionButton
-        android:id="@+id/login_btn"
+        android:id="@+id/update_btn"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
@@ -66,7 +66,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/update_btn" />
 
     <ImageView
         android:id="@+id/imageView"
