--- a/app/src/main/res/layout/activity_doctor_sign_up.xml
+++ b/app/src/main/res/layout/activity_doctor_sign_up.xml
@@ -204,7 +204,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/backgrpund2"
-            android:text="@string/update"
+            android:text="@string/sign_up"
             android:textColor="@android:color/white"
             app:defaultColor="#aa003c"
             app:layout_constraintEnd_toEndOf="parent"
