add signup page and update

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,5 +5,6 @@
         <item>@font/artifika</item>
         <item>@font/chonburi</item>
         <item>@font/imprima</item>
+        <item>@font/italianno</item>
     </array>
 </resources>
