--- a/app/src/main/res/layout/activity_send_prescription.xml
+++ b/app/src/main/res/layout/activity_send_prescription.xml
@@ -151,6 +151,7 @@
         android:backgroundTint="#191818"
         android:text="@string/img_title"
         android:textColor="#070707"
+        android:textSize="18sp"
         app:layout_anchor="@+id/constraintLayout"
         app:layout_anchorGravity="center" />
 
