--- a/app/src/main/res/layout/activity_pharmacy_near_me.xml
+++ b/app/src/main/res/layout/activity_pharmacy_near_me.xml
@@ -7,157 +7,172 @@ android:layout_height="match_parent"
 android:background="#FFFFFF"
 tools:context=".PharmacyNearMe">
 
-<LinearLayout
-    android:id="@+id/linearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="651dp"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/imageView5"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/iconhart" />
+        android:layout_height="651dp"
+        android:backgroundTint="#CDC5C5"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:gravity="center"
-        android:text="@string/avail_phar_title"
-        android:textColor="@color/black"
-        android:textSize="30dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-thin"
-        android:gravity="center"
-        android:text="select your pharmacy and send prescription"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="123dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        app:cardCornerRadius="25dp">
-
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/imageView5"
             android:layout_width="match_parent"
-            android:layout_height="169dp"
-            android:background="@color/cardview_light_background"
-            android:backgroundTint="#F8F5F5"
-            android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/iconhart" />
 
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="280dp"
-                android:layout_marginLeft="12dp"
-                app:srcCompat="@drawable/iconmedi" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/Avail_phar_title"
-                android:textColor="#090909"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="120dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/avail_phar_availbility"
-                android:textColor="#03870D"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="129dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="43dp"
-                android:backgroundTint="#AD80E4"
-                android:drawableStart="@drawable/ic_launcher_background"
-                android:text="@string/per_send_btn" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="123dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        app:cardCornerRadius="25dp">
-
-        <RelativeLayout
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="169dp"
-            android:background="@color/cardview_light_background"
-            android:backgroundTint="#F8F5F5"
-            android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
+            android:text="@string/avail_phar_title"
+            android:textColor="@color/black"
+            android:textSize="30dp" />
+
+        <EditText
+            android:id="@+id/search_pharmacy"
+            android:layout_width="373dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#CCC1F8"
+            android:ems="10"
+            android:hint="@string/phar_search"
+            android:inputType="textPersonName"
+            android:padding="12dp"
+            android:textColorHint="#2B2A2A" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
+            android:gravity="center"
+            android:text="select your pharmacy and send prescription"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="123dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="20dp"
+            app:cardCornerRadius="25dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="169dp"
+                android:background="@color/cardview_light_background"
+                android:backgroundTint="#F8F5F5"
+                android:padding="10dp">
 
 
-            <ImageView
-                android:id="@+id/imageView14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="280dp"
-                android:layout_marginLeft="12dp"
-                app:srcCompat="@drawable/iconmedi" />
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="280dp"
+                    android:layout_marginLeft="12dp"
+                    app:srcCompat="@drawable/iconmedi" />
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:fontFamily="sans-serif-black"
-                android:text="New Pharmacy"
-                android:textColor="#090909"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/Avail_phar_title"
+                    android:textColor="#090909"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="120dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/avail_phar_availbility"
-                android:textColor="#03870D"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="120dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/avail_phar_availbility"
+                    android:textColor="#03870D"
+                    android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="129dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="43dp"
-                android:backgroundTint="#AD80E4"
-                android:drawableStart="@drawable/ic_launcher_background"
-                android:text="@string/per_send_btn" />
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="129dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="96dp"
+                    android:layout_marginTop="43dp"
+                    android:backgroundTint="#AD80E4"
+                    android:drawableStart="@drawable/ic_launcher_background"
+                    android:text="@string/per_send_btn" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
 
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="123dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="20dp"
+            app:cardCornerRadius="25dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="169dp"
+                android:background="@color/cardview_light_background"
+                android:backgroundTint="#F8F5F5"
+                android:padding="10dp">
+
+
+                <ImageView
+                    android:id="@+id/imageView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="280dp"
+                    android:layout_marginLeft="12dp"
+                    app:srcCompat="@drawable/iconmedi" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="New Pharmacy"
+                    android:textColor="#090909"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="120dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/avail_phar_availbility"
+                    android:textColor="#03870D"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="129dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="96dp"
+                    android:layout_marginTop="43dp"
+                    android:backgroundTint="#AD80E4"
+                    android:drawableStart="@drawable/ic_launcher_background"
+                    android:text="@string/per_send_btn" />
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 <com.google.android.material.bottomappbar.BottomAppBar
     android:id="@+id/bottm_bar"
