--- a/app/src/main/res/layout/activity_intropage.xml
+++ b/app/src/main/res/layout/activity_intropage.xml
@@ -4,27 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@null"
     tools:context=".intropage">
 
+
     <Button
-        android:id="@+id/button5"
-        android:layout_width="137dp"
+        android:id="@+id/button6"
+        android:layout_width="132dp"
         android:layout_height="48dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginEnd="136dp"
-        android:backgroundTint="#ffffff"
-        android:drawableEnd="@drawable/next"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/buttontype02"
         android:text="@string/next"
-        android:textColor="#0329FA"
-        android:textSize="18sp"
+        app:backgroundTint="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="402dp"
+        android:layout_width="400dp"
         android:layout_height="468dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,17 +31,14 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="130dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="153dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        app:layout_constraintVertical_bias="0.45"
-        app:tabBackground="@drawable/indicator_selecter"></com.google.android.material.tabs.TabLayout>
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        app:layout_constraintVertical_bias="0.65"
+        app:tabBackground="@drawable/indicator_selecter"
+        app:tabIndicatorColor="@color/white"></com.google.android.material.tabs.TabLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
