--- a/app/src/main/res/layout/activity_intropage.xml
+++ b/app/src/main/res/layout/activity_intropage.xml
@@ -9,12 +9,24 @@
 
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/nextbtn"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/buttontype02"
         android:text="@string/next"
+        app:backgroundTint="@android:color/holo_blue_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+    <Button
+        android:id="@+id/finishedbtn"
+        android:layout_width="132dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/buttontype02"
+        android:text="Finished"
         app:backgroundTint="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -37,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/nextbtn"
         app:layout_constraintVertical_bias="0.65"
         app:tabBackground="@drawable/indicator_selecter"
         app:tabIndicatorColor="@color/white"></com.google.android.material.tabs.TabLayout>
