add initial layout

--- a/app/src/main/res/layout/activity_intial_layout.xml
+++ b/app/src/main/res/layout/activity_intial_layout.xml
@@ -5,5 +5,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Intial_layout">
+    <!-- for header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="427dp"
+        android:layout_height="90dp"
+        android:background="@drawable/header"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="28dp"
+            android:text="your function name"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="62dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="31dp"
+            android:drawableStart="@drawable/ic_back"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView16"
+            app:layout_constraintHorizontal_bias="0.295"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- for header end -->
+
+
+    <!-- implement function-->
+
+
+    <!-- implement function-->
+
+
+    <!-- bottom navigation start-->
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="416dp"
+        android:layout_height="76dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomappnavigate"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:itemBackground="@android:color/holo_blue_dark"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/bottom_navigate"></com.google.android.material.bottomnavigation.BottomNavigationView>
+    </LinearLayout>
+
+    <!-- bottom navigation end-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
