--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -174,7 +174,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
-        android:id="@+id/nextbtn"
+        android:id="@+id/uploadP"
         android:layout_width="257dp"
         android:layout_height="71dp"
         android:layout_marginTop="16dp"
@@ -190,7 +190,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/quick_service"
         android:textColor="#434343"
@@ -198,7 +198,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.108"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nextbtn" />
+        app:layout_constraintTop_toBottomOf="@+id/uploadP" />
 
     <Button
         android:id="@+id/button7"
@@ -214,21 +214,23 @@
         app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="180dp"
         android:layout_height="62dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="13dp"
         android:background="@drawable/buttontype02"
         android:text="@string/ambulence_service_1990"
         app:backgroundTint="@color/design_default_color_error"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.071" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
