Edit sign up ui

--- a/app/src/main/res/layout/activity_sign_up_ui.xml
+++ b/app/src/main/res/layout/activity_sign_up_ui.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="433dp"
-        android:layout_height="361dp"
+        android:layout_height="300dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="184dp"
         android:layout_marginEnd="4dp"
@@ -66,20 +66,20 @@
         android:id="@+id/RSignup"
         android:layout_width="282dp"
         android:layout_height="54dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/buttontype02"
         android:text="@string/sign_up"
         app:backgroundTint="@android:color/holo_blue_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <Button
         android:id="@+id/redirect_login"
         android:layout_width="282dp"
         android:layout_height="54dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/btn03style"
         android:text="@string/login_text"
         android:textColor="#02355E"
@@ -126,5 +126,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
