--- a/app/src/main/res/layout/activity_sign_up_ui.xml
+++ b/app/src/main/res/layout/activity_sign_up_ui.xml
@@ -31,7 +31,7 @@
         app:srcCompat="@drawable/doctor_illustration" />
 
     <EditText
-        android:id="@+id/Remail"
+        android:id="@+id/emailEditText"
         android:layout_width="353dp"
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <EditText
-        android:id="@+id/Rpassword"
+        android:id="@+id/passwordEditText"
         android:layout_width="353dp"
         android:layout_height="50dp"
         android:layout_marginTop="128dp"
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <Button
-        android:id="@+id/RSignup"
+        android:id="@+id/signUpBtn"
         android:layout_width="282dp"
         android:layout_height="54dp"
         android:layout_marginTop="16dp"
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpProgressBar" />
 
     <Button
         android:id="@+id/redirect_login"
@@ -96,7 +96,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Rpassword">
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">
 
         <RadioButton
             android:id="@+id/asDoctor"
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/signUpProgressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
