--- a/app/src/main/res/layout/activity_add_pres_info.xml
+++ b/app/src/main/res/layout/activity_add_pres_info.xml
@@ -77,7 +77,7 @@
                 android:paddingStart="7dp" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/upload_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
