list view updated

--- a/app/src/main/res/layout/activity_pharmacy_list.xml
+++ b/app/src/main/res/layout/activity_pharmacy_list.xml
@@ -44,14 +44,9 @@
         android:textColor="#424242"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView32"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
     <ListView
         android:id="@+id/p_listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="6dp" />
 </LinearLayout>
