--- a/app/src/main/res/layout/pharmacy_rawdata.xml
+++ b/app/src/main/res/layout/pharmacy_rawdata.xml
@@ -4,34 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="12dp"
     android:background="@drawable/btn03style"
     android:backgroundTint="@null">
 
     <TextView
         android:id="@+id/phar_name"
-        android:layout_width="67dp"
-        android:layout_height="29dp"
+        android:layout_width="188dp"
+        android:layout_height="38dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/buttontype02"
+        android:gravity="center"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/par_description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView16"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintVertical_bias="0.062" />
 
     <TextView
         android:id="@+id/par_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_width="236dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="28dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.212"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView16" />
 
     <ImageView
@@ -44,4 +47,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/doctor_illustration" />
+
+    <ProgressBar
+        android:id="@+id/raiting"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="225dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/par_description" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
