--- a/app/src/main/res/layout/activity_intial_layout.xml
+++ b/app/src/main/res/layout/activity_intial_layout.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="92dp"
             android:layout_marginTop="28dp"
-            android:text="your function name"
+            android:text="@string/edit_doctor"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
