--- a/app/src/main/res/layout/activity_doctor_sign_up.xml
+++ b/app/src/main/res/layout/activity_doctor_sign_up.xml
@@ -81,7 +81,7 @@
             android:background="@drawable/login_edit_text"
             android:ems="10"
             android:hint="@string/mobile"
-            android:inputType="textPersonName"
+            android:inputType="phone"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
