--- a/app/src/main/res/layout/activity_edit_doctor2.xml
+++ b/app/src/main/res/layout/activity_edit_doctor2.xml
@@ -149,6 +149,7 @@
 
         <EditText
             android:id="@+id/updateDoctorMobileEditText"
+            android:inputType="phone"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="32dp"
