--- a/app/src/main/res/layout/activity_patient_sign_up.xml
+++ b/app/src/main/res/layout/activity_patient_sign_up.xml
@@ -63,7 +63,7 @@
             android:background="@drawable/login_edit_text"
             android:ems="10"
             android:hint="@string/dob"
-            android:inputType="textPersonName"
+            android:inputType="date"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
             android:background="@drawable/login_edit_text"
             android:ems="10"
             android:hint="@string/mobile"
-            android:inputType="number"
+            android:inputType="phone"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
